--- a/styles/light.css
+++ b/styles/light.css
@@ -6,9 +6,7 @@
   font-family: "Open Sans", sans-serif;
   font-weight: bold;
 }
-::placeholder {
-  color: rgb(221, 221, 221);
-}
+
 .wrapper {
   height: 100vh;
   width: 100%;
@@ -16,10 +14,9 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(20, 19, 19);
+  background-color: rgb(28, 231, 221);
   transition: 0.8s all;
 }
-
 h1 {
   text-align: center;
   margin-bottom: 1.5%;
@@ -33,11 +30,11 @@ h1 {
 }
 input {
   padding: 25px;
-  color: rgb(255, 255, 255);
+  color: rgb(87, 87, 87);
   font-size: 1em;
   cursor: pointer;
   width: 70px;
-  background-color: rgb(47, 51, 50);
+  background-color: #fff;
   border: none;
   outline: none;
   border-radius: 4px;
@@ -50,22 +47,24 @@ input {
 .fifth-row {
   margin-bottom: 3px;
 }
+input[type="button"] {
+  color: rgb(122, 122, 122);
+}
 input[type="text"] {
-  background-color: rgb(47, 51, 50);
-
+  background-color: rgb(255, 255, 255);
   width: 218px;
 }
 input[type="button"]:hover {
-  background-color: rgb(160, 160, 160);
+  background-color: rgb(37, 35, 59);
   color: #fff;
 }
 #clear {
   color: #fff;
-  background-color: rgb(255, 42, 42);
+  background-color: rgb(255, 25, 25);
 }
 button {
   border: none;
-  background-color: rgb(39, 36, 36);
+  background-color: rgb(41, 38, 38);
   padding: 8px;
   color: white;
   margin: 2px;
@@ -73,18 +72,18 @@ button {
   outline: none;
   border-radius: 4px;
   font-size: 0.8em;
-  font-weight: 200;
   font-weight: 600;
 }
 
 a {
   text-decoration: none;
-  color: #fff;
   border: none;
-  background-color: rgb(39, 36, 36);
+  background-color: rgb(41, 38, 38);
   padding: 8px;
   color: white;
   margin: 2px;
+  cursor: pointer;
+  outline: none;
   border-radius: 4px;
   font-size: 0.8em;
   font-weight: 600;
